syntax = "proto3";

package user;

option go_package = "internal/ports/grpc";

import "google/protobuf/empty.proto";

service UserService {
  rpc ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc getUser(UserRequest) returns (UserResponse) {}
  rpc registerUser(UserRegisterRequest) returns (UserRegisterResponse) {}
  rpc authByLoginPassword(UserAuthRequest) returns (UserAuthResponse) {}
}

message UserRequest {
  string uuid = 1;
}

message UserResponse {
  string uuid = 1;
  string login = 2;
}

message UserRegisterRequest {
  string login = 1;
  string password = 2;
}

message UserRegisterResponse {
  string uuid = 1;
  string login = 2;
}

message UserAuthRequest {
  string login = 1;
  string password = 2;
}

message UserAuthResponse {
  string access = 1;
  string refresh = 2;
}
